@@ -391,8 +391,9 @@ class BaseDirectory(PropertiesPostProcessor, SimpleItemWithProperties):
         raised if the entry does not exist.
         """
         try:
-            self.checkViewEntryAllowed()
-            return self._getEntryKW(id)
+            entry = self._getEntryKW(id)
+            self.checkViewEntryAllowed(entry=entry)
+            return entry
         except (KeyError, ValueError, Unauthorized):
             if default is not _marker:
                 return default
